HIVE-28869: added --add-opens java options.