@@ -123,7 +123,7 @@ public class TempletonControllerJob extends Configured implements Tool, JobSubmi
     }
     String amJavaOpts = appConf.controllerAMChildOpts();
     if (amJavaOpts != null && !amJavaOpts.isEmpty()) {
-      conf.set(AppConfig.HADOOP_MR_AM_JAVA_OPTS, amJavaOpts);
+      conf.set(AppConfig.HADOOP_MR_AM_JAVA_OPTS, addJavaOpensPackages(amJavaOpts));
     }
 
     String user = UserGroupInformation.getCurrentUser().getShortUserName();
@@ -167,6 +167,39 @@ public class TempletonControllerJob extends Configured implements Tool, JobSubmi
     }
     return 0;
   }
+  private String addJavaOpensPackages(String amJavaOpts) {
+    final int JAVA_SPEC_VER =
+        Math.max(8, Integer.parseInt(System.getProperty("java.specification.version").split("\\.")[0]));
+    if (JAVA_SPEC_VER >= 9) {
+      return String.join(" ", amJavaOpts, getJavaAddOpenOptions());
+    } else {
+      return amJavaOpts;
+    }
+  }
+  private String getJavaAddOpenOptions() {
+    return String.join(" ",
+        "-XX:+IgnoreUnrecognizedVMOptions",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.math=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.text=ALL-UNNAMED",
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
+        "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+        "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED",
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.regex=ALL-UNNAMED"
+    );
+  }
+
   private String addToken(Job job, String user, String type) throws IOException, InterruptedException,
           TException {
     if(!secureMetastoreAccess) {
